      have multiple lines and contextual information, we trim and
      pass only the first line, without the trailing `at line #`
      added from eg. plain `die`. This error is still set unmodified
      as the exception.
    * Injection and extraction methods for processors catch errors
      from their callbacks as required by
      https://opentelemetry.io/docs/specs/otel/error-handling/#guidance
    * Validate initial values for TraceContext::TraceFlags: they
      must be in the 0-255 range (inclusive) or they are ignored

0.015     2023-11-09 23:42:47+00:00 Europe/London

    * Add -span and -trace export tags to OpenTelemetry::Constants
    * Add tests for OpenTelemetry::Constants
    * Add otel_config to OpenTelemetry exportable functions

0.014     2023-11-09 00:01:05+00:00 Europe/London

    * Add missing documentation for the 'record_exception' method
      for spans
    * OpenTelemetry::X errors print stack traces when stringified
    * Improve the reporting of errors caught in calls to
      'in_span' in OpenTelementry::Trace
    * Minor documentation fixes throughout

0.013     2023-11-07 20:23:49+00:00 Europe/London

    * Add support for a `details` parameter to the error handler
      for passing additional structured context data

0.012     2023-11-05 18:29:49+00:00 Europe/London

    * Fix the documentation for OpenTelemetry::Common::config, which
      incorrectly stated the order variables are read in
    * Added otel_untraced_context to OpenTelemetry exportable functions

0.011     2023-11-01 23:18:14+00:00 Europe/London

    * Added missing documentation for
      OpenTelemetry::Propagator::TraceContext::TraceState
    * Publicly index existing OpenTelemetry::Trace::Span::Status
    * Fix other minor issues in the documentation

0.010     2023-10-31 23:05:38+00:00 Europe/London

    Added Tracing API implementation.

0.001     2020-06-29 00:03:29+08:00 Asia/Kuala_Lumpur

    Initial release.